--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -1,5 +1,5 @@
 <!-- 模态框 -->
-<div class="modal fade bs-example-modal-sm" id='unsupported'>
+<!--<div class="modal fade bs-example-modal-sm" id='unsupported'>
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
@@ -15,9 +15,9 @@
     </div>
   </div>
 </div>
-<!--底部内容-->
+&lt;!&ndash;底部内容&ndash;&gt;
 <div class="container" id='footer'>
   <p>版权所有 吉林大学（<a href="https://blog.csdn.net/liudongdong19" target="_blank">博客地址</a>） 设计维护</p>
   <p>Copyright © Liudongdong JiLin University . All Rights Reserved.</p>
-</div>
+</div>-->
 <!--底部内容-->
