--- a/src/main/resources/templates/flower/planted/list.html
+++ b/src/main/resources/templates/flower/planted/list.html
@@ -5,48 +5,42 @@
     <title>花卉培育管理系统</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="Shortcut Icon" href="${request.contextPath}/images/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="${request.contextPath}/fonts/css/font-awesome.css"/>
-    <link rel="stylesheet" href="${request.contextPath}/css/bootstrap.min.css">
-    <link rel="stylesheet" href="${request.contextPath}/css/main.css">
-    <link rel="stylesheet" href="${request.contextPath}/lib/layui/css/layui.css">
-    <script src='${request.contextPath}/js/jquery.min.js'></script>
-    <script src='${request.contextPath}/js/bootstrap.min.js'></script>
-    <script src="${request.contextPath}/js/common.js"></script>
-    <script src="${request.contextPath}/js/index.js"></script>
-    <script src="${request.contextPath}/lib/layui/layui.js"></script>
+    <link rel="stylesheet" href="${request.contextPath}/css/font.css">
+    <link rel="stylesheet" href="${request.contextPath}/css/xadmin.css">
+    <!-- <link rel="stylesheet" href="./css/theme5.css"> -->
+    <script src="${request.contextPath}/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="${request.contextPath}/js/xadmin.js"></script>
+    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
+    <!--[if lt IE 9]>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script>
+        // 是否开启刷新记忆tab功能
+        // var is_remember = false;
+    </script>
 </head>
 <body>
-<#include "${request.contextPath}/include/header.html"/>
-<#include "${request.contextPath}/include/nav.html"/>
+
 <!--右边主体内容-->
-<div id="content">
-    <!--主内容头部面包屑导航-->
-    <div id="content-header">
-        <ol class="breadcrumb">
-            <li class="active">
-                <a href="/index"><span class="icon icon-pencil"></span> 已种花卉管理</a>
-            </li>
-        </ol>
-    </div>
-    <!--主内容头部面包屑导航-->
-    <!--用户列表-->
-    <div class="container-fluid table_list" id="flower_list" style="padding-top: auto">
-        <div>
-            <form action="/flower/list" method="get" >
-                <!-- <input type="text" class="form-control" id="flower_message" placeholder="输入用户名">-->
-                <!--<div class="input-group-addon" id="search">搜索</div>-->
-                <tr>
-                    <td >花卉名称:</td>
-                    <td ><input name="name" ></td>
-                    <td >&nbsp;&nbsp;花卉种类:</td>
-                    <td ><input name="type"  ></td>
-                    <td>   <button class="layui-btn" type="submit"><i class="layui-icon">&#xe615;</i></button></td>
-                </tr>
+<div class="layui-fluid">
+    <div class="layui-row">
+        <div class="layui-card-body ">
+            <form class="layui-form layui-col-space5" action="/flower/list" method="get">
+                <div class="layui-inline layui-show-xs-block">
+                    <input type="text" class="layui-input"  autocomplete="off" placeholder="花卉名称" name="name" id="name">
+                </div>
+                <div class="layui-inline layui-show-xs-block">
+                    <input type="text" class="layui-input"  autocomplete="off" placeholder="花卉种类" name="type" id="type">
+                </div>
+                <div class="layui-inline layui-show-xs-block">
+                    <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
+                </div>
             </form>
         </div>
-        <div >
-            <table id="flower" class="table  table-striped  table-bordered table-hover " lay-filter="flower">
-                <thead>
+        <div class="layui-card-body ">
+            <table id="flower" class="layui-table layui-form">
+            <thead>
                 <tr>
                     <!-- <th><input type="checkbox" class="checkAll" /></th>&ndash;&gt;-->
                     <th lay-data="{field:'id', width:100,sort:true}">花卉ID</th>
