--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,147 +7,292 @@
 	<link rel="Shortcut Icon" href="${request.contextPath}/images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="${request.contextPath}/fonts/css/font-awesome.css"/>
 	<link rel="stylesheet" href="${request.contextPath}/css/bootstrap.min.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/xadmin.css">
 	<link rel="stylesheet" href="${request.contextPath}/css/main.css">
 	<script src='${request.contextPath}/js/jquery.min.js'></script>
 	<script src='${request.contextPath}/js/bootstrap.min.js'></script>
 	<script src="${request.contextPath}/js/common.js"></script>
 	<script src="${request.contextPath}/js/index.js"></script>
+
+
+	<link rel="stylesheet" href="${request.contextPath}/css/font.css">
+	<link rel="stylesheet" href="${request.contextPath}/css/xadmin.css">
+	<!-- <link rel="stylesheet" href="./css/theme5.css"> -->
+	<script src="${request.contextPath}/lib/layui/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="${request.contextPath}/js/xadmin.js"></script>
+	<!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
+	<!--[if lt IE 9]>
+	<script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+	<script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 <body>
-	<#include "${request.contextPath}/include/header.html"/>
-	<#include "${request.contextPath}/include/nav.html"/>
-	<!--右边主体内容-->
-	<div id="content">
-		<!--主内容头部面包屑导航-->
-		<div id="content-header">
-			<ol class="breadcrumb">
-				<li class="active">
-					<a href="index.html"><span class="icon icon-home"></span> 首页</a>
-				</li>
-				<li><a >首页子区域</a></li>
-			</ol>
-		</div>
-		<!--主内容头部面包屑导航-->
-
-		<!--指标参数总览-->
-		<div class="container-fluid" id="indexContent">
-			<h2>指标总览</h2>
-			<div class="row">
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="tile tile-pink">
-						<span class="icon  icon-dashboard icon-3x"></span>
-						<p class="parameterValue"  id="temperture">20.1℃</p>
-						<p class="parameter">温度</p>
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="tile tile-blue">
-						<span class="icon  icon-bar-chart icon-3x"></span>
-						<p class="parameterValue"  id="rjy_zd">8.45mg/L</p>
-						<p class="parameter">溶氧量</p>
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="tile tile-paleBlue">
-						<span class="icon icon-signal icon-3x"></span>
-						<p class="parameterValue"  id="rjy_bhd">95.60%</p>
-						<p class="parameter">溶氧饱和度</p>
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="tile tile-purple">
-						<span class="icon  icon-beaker icon-3x"></span>
-						<p class="parameterValue"  id="ph">7.0</p>
-						<p class="parameter">PH值</p>
-					</div>
-				</div>
-
-			</div>
-		</div>
-		<!--指标参数总览-->
-		<hr />
-		<!--预警提醒-->
-		<div class="container-fluid">
-			<h2>预警提醒</h2>
-			<div class="table-responsive">
-				<table class="table  table-striped  table-bordered table-hover">
-					<thead>
-						<tr>
-							<th>数据ID</th>
-							<th>传感器ID</th>
-							<th>提醒信息</th>
-							<th>时间</th>
-							<th>备注</th>
-						</tr>
-					</thead>
-					<tbody id="notificationTable">
-						<!-- <tr class="danger">
-							<td>1</td>
-							<td>1234534</td>
-							<td>温度为29℃，过高！</td>
-							<td>2016/5/18 22:09:27</td>
-							<td>...</td>
-						</tr> -->
-
-
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<!--预警提醒-->
-		<hr />
-		<!--设备总览-->
-		<div class="container-fluid ">
-			<!--传感器设备总览-->
-			<h2>设备总览</h2>
-			<div class="table-responsive">
-				<table class="table  table-striped  table-bordered table-hover">
-					<thead>
-						<tr>
-							<th>设备ID</th>
-							<th>设备名</th>
-							<th>开启时间</th>
-							<th>关闭时间</th>
-						</tr>
-					</thead>
-					<tbody>
-						<!-- 表格数据模板 -->
-						<tr>
-							<td>13500752437</td>
-							<td>增氧机</td>
-							<td>2016/5/17 22:09:27</td>
-							<td>2016/5/18 22:09:27</td>
-						</tr>
-
-					</tbody>
-				</table>
-			</div>
-
-			<!--传感器设备总览-->
-		</div>
-		<!--传感器设备总览-->
-
+<body class="index">
+<!-- 顶部开始 -->
+<div class="container">
+	<div class="logo">
+		<a href="/index">X-admin v2.2</a></div>
+	<div class="left_open">
+		<a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
 	</div>
-	<!--右边主体内容-->
-	<!-- 模态框 -->
-	<div class="modal fade bs-example-modal-sm" id='unsupported'>
-		<div class="modal-dialog modal-sm">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">提示消息！</h4>
-				</div>
-				<div class="modal-body">
-					<p>您的浏览器过低！请使用新版浏览器查看！</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-info" data-dismiss="modal">确定</button>
-				</div>
-			 </div>
-		</div>
+	<ul class="layui-nav left fast-add" lay-filter="">
+		<li class="layui-nav-item">
+			<a href="javascript:;">+新增</a>
+			<dl class="layui-nav-child">
+				<!-- 二级菜单 -->
+			<!--	<dd>
+					<a onclick="xadmin.open('最大化','http://www.baidu.com','','',true)">
+						<i class="iconfont">&#xe6a2;</i>弹出最大化</a></dd>
+				<dd>
+					<a onclick="xadmin.open('弹出自动宽高','http://www.baidu.com')">
+						<i class="iconfont">&#xe6a8;</i>弹出自动宽高</a></dd>
+				<dd>
+					<a onclick="xadmin.open('弹出指定宽高','http://www.baidu.com',500,300)">
+						<i class="iconfont">&#xe6a8;</i>弹出指定宽高</a></dd>
+				<dd>
+					<a onclick="xadmin.add_tab('在tab打开','member-list.html')">
+						<i class="iconfont">&#xe6b8;</i>在tab打开</a></dd>
+				<dd>
+					<a onclick="xadmin.add_tab('在tab打开刷新','member-del.html',true)">
+						<i class="iconfont">&#xe6b8;</i>在tab打开刷新</a></dd>-->
+			</dl>
+		</li>
+	</ul>
+	<ul class="layui-nav right" lay-filter="">
+		<li class="layui-nav-item">
+			<a href="javascript:;">admin</a>
+			<dl class="layui-nav-child">
+				<!-- 二级菜单 -->
+				<dd>
+					<a onclick="xadmin.open('个人信息','https://blog.csdn.net/liudongdong19')">个人信息</a></dd>
+				<dd>
+					<a a href="/login">切换帐号</a></dd>
+				<dd>
+					<a href="/loginout">退出</a></dd>
+			</dl>
+		</li>
+		<li class="layui-nav-item to-index">
+			<a href="/">前台首页</a></li>
+	</ul>
+</div>
+<!-- 顶部结束 -->
+<!-- 中部开始 -->
+<!-- 左侧菜单开始 -->
+<!--del-->
+<div class="left-nav">
+	<div id="side-nav">
+		<ul id="nav">
+			<li>
+				<a href="javascript:/index;">
+					<i class="iconfont icon-home" lay-tips="首页">&#xe6b8;</i>
+					<cite>首页</cite>
+				</a>
+			</li>
+			<li>
+				<a onclick="xadmin.add_tab('项目监控','/monitor/list')">  <!--无链接-->
+					<i class="iconfont icon-th" lay-tips="项目监控">&#xe6b8;</i>
+					<cite>项目监控</cite>
+				</a>
+			</li>
+			<li>
+				<a href="javascript:;">
+					<i class="iconfont left-nav-li" lay-tips="历史信息">&#xe723;</i>
+					<cite>历史信息</cite>
+					<i class="iconfont nav_right">&#xe697;</i></a>
+				<ul class="sub-menu">
+					<li>
+						<a onclick="xadmin.add_tab('报警信息','/alarm/list')">
+							<cite>报警信息</cite></a>
+					</li>
+					<li>
+						<a onclick="xadmin.add_tab('传感器参数','/sensordata/list')">
+							<cite>传感器参数</cite></a>
+					</li>
+					<li>
+						<a onclick="xadmin.add_tab('数据备份','/datarestore')">
+							<cite>数据备份</cite></a>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="javascript:;">
+					<i class="iconfont left-nav-li" lay-tips="花卉宝典">&#xe723;</i>
+					<cite>花卉宝典</cite>
+					<i class="iconfont nav_right">&#xe697;</i></a>
+				<ul class="sub-menu">
+					<li>
+						<a onclick="xadmin.add_tab('在种花卉','/flower/list')">
+							<cite>在种花卉</cite></a>
+					</li>
+					<li>
+						<a onclick="xadmin.add_tab('花卉大全','/resourselist')">
+							<cite>花卉大全</cite></a>
+					</li>
+					<li>
+						<a onclick="xadmin.add_tab('养花日记','/dairylist')">
+							<cite>养花日记</cite></a>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="javascript:;">
+					<i class="iconfont left-nav-li" lay-tips="设备管理">&#xe723;</i>
+					<cite>设备管理典</cite>
+					<i class="iconfont nav_right">&#xe697;</i></a>
+				<ul class="sub-menu">
+					<li>
+						<a onclick="xadmin.add_tab('设备基本信息','/deviceinfo/list')">
+							<cite>设备基本信息</cite></a>
+					</li>
+					<li>
+						<a onclick="xadmin.add_tab('设备维护信息','/operationinfo/list')">
+							<cite>设备维护信息</cite></a>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="javascript:;">
+					<i class="iconfont left-nav-li" lay-tips="用户管理">&#xe723;</i>
+					<cite>用户管理</cite>
+					<i class="iconfont nav_right">&#xe697;</i></a>
+				<ul class="sub-menu">
+					<li>
+						<a onclick="xadmin.add_tab('用户基本信息','/userinfo/list')">
+							<cite>用户基本信息</cite></a>
+					</li>
+					<li>
+						<a onclick="xadmin.add_tab('用户操作信息','/operationinfo/list')">
+							<cite>用户操作信息</cite></a>
+					</li>
+				</ul>
+			</li>
+		</ul>
 	</div>
+</div>
+<!--右边主体内容-->
+<div class="page-content">
+	<div class="layui-tab tab" lay-filter="xbs_tab" lay-allowclose="false">
+		<ul class="layui-tab-title">
+			<li class="home">
+				<i class="layui-icon">&#xe68e;</i>Dashboard</li></ul>
+		<div class="layui-unselect layui-form-select layui-form-selected" id="tab_right">
+			<dl>
+				<dd data-type="this">关闭当前</dd>
+				<dd data-type="other">关闭其它</dd>
+				<dd data-type="all">关闭全部</dd></dl>
+		</div>
+		<div class="layui-tab-content">
+			<div class="layui-tab-item layui-show">
+				<div class="layui-fluid">
+					<div id="content">
+						<!--指标参数总览-->
+						<div class="container-fluid" id="indexContent">
+							<h2>指标总览</h2>
+							<div class="row">
+								<div class="col-sm-6 col-md-6 col-lg-3">
+									<div class="tile tile-pink">
+										<span class="icon  icon-dashboard icon-3x"></span>
+										<p class="parameterValue"  id="temperture">20.1℃</p>
+										<p class="parameter">温度</p>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-3">
+									<div class="tile tile-blue">
+										<span class="icon  icon-bar-chart icon-3x"></span>
+										<p class="parameterValue"  id="rjy_zd">8.45mg/L</p>
+										<p class="parameter">溶氧量</p>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-3">
+									<div class="tile tile-paleBlue">
+										<span class="icon icon-signal icon-3x"></span>
+										<p class="parameterValue"  id="rjy_bhd">95.60%</p>
+										<p class="parameter">溶氧饱和度</p>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-6 col-lg-3">
+									<div class="tile tile-purple">
+										<span class="icon  icon-beaker icon-3x"></span>
+										<p class="parameterValue"  id="ph">7.0</p>
+										<p class="parameter">PH值</p>
+									</div>
+								</div>
+
+							</div>
+						</div>
+						<!--指标参数总览-->
+						<hr />
+						<!--预警提醒-->
+						<div class="container-fluid">
+							<h2>预警提醒</h2>
+							<div class="table-responsive">
+								<table class="table  table-striped  table-bordered table-hover">
+									<thead>
+									<tr>
+										<th>数据ID</th>
+										<th>传感器ID</th>
+										<th>提醒信息</th>
+										<th>时间</th>
+										<th>备注</th>
+									</tr>
+									</thead>
+									<tbody id="notificationTable">
+									<!-- <tr class="danger">
+                                        <td>1</td>
+                                        <td>1234534</td>
+                                        <td>温度为29℃，过高！</td>
+                                        <td>2016/5/18 22:09:27</td>
+                                        <td>...</td>
+                                    </tr> -->
 
 
-	<#include "${request.contextPath}/include/footer.html"/>
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<!--预警提醒-->
+						<hr />
+						<!--设备总览-->
+						<div class="container-fluid ">
+							<!--传感器设备总览-->
+							<h2>设备总览</h2>
+							<div class="table-responsive">
+								<table class="table  table-striped  table-bordered table-hover">
+									<thead>
+									<tr>
+										<th>设备ID</th>
+										<th>设备名</th>
+										<th>开启时间</th>
+										<th>关闭时间</th>
+									</tr>
+									</thead>
+									<tbody>
+									<!-- 表格数据模板 -->
+									<tr>
+										<td>13500752437</td>
+										<td>增氧机</td>
+										<td>2016/5/17 22:09:27</td>
+										<td>2016/5/18 22:09:27</td>
+									</tr>
+
+									</tbody>
+								</table>
+							</div>
+
+							<!--传感器设备总览-->
+						</div>
+						<!--传感器设备总览-->
+
+					</div>
+					<!--右边主体内容-->
+				</div>
+			</div>
+		</div>
+		<div id="tab_show"></div>
+	</div>
+</div>
+<div class="page-content-bg"></div>
+
+
 </body>
 </html>
