add LoginHandlerInterceptor function,but with shiro ,after authentication ,cant deal with redirect,waiting to be done.Add echart to show sensordata,till now ,i found i didn't handle entity relationships well,a little mess.

--- a/src/main/resources/templates/history/alarm/list.html
+++ b/src/main/resources/templates/history/alarm/list.html
@@ -53,7 +53,7 @@
                 <#list alarms!'' as p>
                 <tr>
                     <td>${p.id!''}</td>
-                    <td>${p.deviceId!''}</td>
+                    <td>${p.deviceId!'295'}</td>
                     <td>${p.state!''}</td>
                     <td>${p.alarminfo!''}</td>
                     <td>${p.createdate!''}</td>
