--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 <!-- 顶部开始 -->
 <div class="container">
 	<div class="logo">
-		<a href="/index">X-admin v2.2</a></div>
+		<a href="/index">FlowerManager</a></div>
 	<div class="left_open">
 		<a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
 	</div>
@@ -137,7 +137,7 @@
 			<li>
 				<a href="javascript:;">
 					<i class="iconfont left-nav-li" lay-tips="设备管理">&#xe723;</i>
-					<cite>设备管理典</cite>
+					<cite>设备管理</cite>
 					<i class="iconfont nav_right">&#xe697;</i></a>
 				<ul class="sub-menu">
 					<li>
@@ -184,7 +184,7 @@
 		<div class="layui-tab-content">
 			<div class="layui-tab-item layui-show">
 				<div class="layui-fluid">
-					<div id="content">
+					<div id="content" style="margin-left: auto">
 						<!--指标参数总览-->
 						<div class="container-fluid" id="indexContent">
 							<h2>指标总览</h2>
@@ -200,21 +200,21 @@
 									<div class="tile tile-blue">
 										<span class="icon  icon-bar-chart icon-3x"></span>
 										<p class="parameterValue"  id="rjy_zd">8.45mg/L</p>
-										<p class="parameter">溶氧量</p>
+										<p class="parameter">湿度</p>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-3">
 									<div class="tile tile-paleBlue">
 										<span class="icon icon-signal icon-3x"></span>
 										<p class="parameterValue"  id="rjy_bhd">95.60%</p>
-										<p class="parameter">溶氧饱和度</p>
+										<p class="parameter">光照</p>
 									</div>
 								</div>
 								<div class="col-sm-6 col-md-6 col-lg-3">
 									<div class="tile tile-purple">
 										<span class="icon  icon-beaker icon-3x"></span>
 										<p class="parameterValue"  id="ph">7.0</p>
-										<p class="parameter">PH值</p>
+										<p class="parameter">土壤湿度</p>
 									</div>
 								</div>
 
@@ -237,13 +237,13 @@
 									</tr>
 									</thead>
 									<tbody id="notificationTable">
-									<!-- <tr class="danger">
+									 <tr class="danger">
                                         <td>1</td>
                                         <td>1234534</td>
                                         <td>温度为29℃，过高！</td>
                                         <td>2016/5/18 22:09:27</td>
                                         <td>...</td>
-                                    </tr> -->
+                                    </tr>
 
 
 									</tbody>
