--- a/src/main/resources/templates/history/sensordata/list.html
+++ b/src/main/resources/templates/history/sensordata/list.html
@@ -2,9 +2,230 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>FlowerSensorinfor</title>
+    <meta http-equiv="refresh" content="10">
 </head>
 <body>
+<div class="layui-fluid">
+    <div class="layui-row layui-col-space15">
 
+        <div class="layui-col-sm12 layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header">最新一周温度数据</div>
+                <div class="layui-card-body" style="min-height: 280px;">
+                    <div id="main1" class="layui-col-sm12" style="height: 300px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-sm12 layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header">最新一周湿度数据</div>
+                <div class="layui-card-body" style="min-height: 280px;">
+                    <div id="main2" class="layui-col-sm12" style="height: 300px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-sm12 layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header">最新一周光照数据</div>
+                <div class="layui-card-body" style="min-height: 280px;">
+                    <div id="main3" class="layui-col-sm12" style="height: 300px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="layui-col-sm12 layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header">最新一周土壤湿度数据</div>
+                <div class="layui-card-body" style="min-height: 280px;">
+                    <div id="main4" class="layui-col-sm12" style="height: 300px;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts.min.js"></script>
+<script type="text/javascript">
+    // 基于准备好的dom，初始化echarts实例
+    // 指定图表的配置项和数据
+    var myChart = echarts.init(document.getElementById('main1'));
+    var option = {
+        grid: {
+            top: '5%',
+            right: '1%',
+            left: '1%',
+            bottom: '10%',
+            containLabel: true
+        },
+        tooltip: {
+            trigger: 'axis'
+        },
+        xAxis: {
+            type: 'category',
+            data:[
+                <#if temperature?exists>
+                    <#list temperature?keys as key>
+                    "${key}",
+                    </#list>
+                </#if>
+              ]
+        },
+        yAxis: {
+            type: 'value'
+        },
+        series: [{
+            name:'空气温度',
+            data:[
+                <#if temperature?exists>
+                    <#list temperature?keys as key>
+                     "${temperature[key]!'1'}",
+                    </#list>
+                 </#if>
+                 ],
+            type: 'line',
+            smooth: true
+        }]
+    };
+    // 使用刚指定的配置项和数据显示图表。
+    myChart.setOption(option);
+
+    var myChart2 = echarts.init(document.getElementById('main2'));
+
+    // 指定图表的配置项和数据
+    var option = {
+        grid: {
+            top: '5%',
+            right: '1%',
+            left: '1%',
+            bottom: '10%',
+            containLabel: true
+        },
+        tooltip: {
+            trigger: 'axis'
+        },
+        xAxis: {
+            type: 'category',
+            data: [
+                <#if humidity?exists>
+                    <#list humidity?keys as key>
+                     "${key!''}",
+                    </#list>
+                </#if>
+            ]
+        },
+        yAxis: {
+            type: 'value'
+        },
+        series: [{
+            name:'空气湿度',
+            data: [
+                <#if humidity?exists>
+                    <#list humidity?keys as key>
+                    "${humidity[key]!''}",
+                    </#list>
+                </#if>
+            ],
+            type: 'line',
+            smooth: true
+        }]
+    };
+    // 使用刚指定的配置项和数据显示图表。
+    myChart2.setOption(option);
+
+    var myChart3 = echarts.init(document.getElementById('main3'));
+
+    // 指定图表的配置项和数据
+    var option = {
+        grid: {
+            top: '5%',
+            right: '1%',
+            left: '1%',
+            bottom: '10%',
+            containLabel: true
+        },
+        tooltip: {
+            trigger: 'axis'
+        },
+        xAxis: {
+            type: 'category',
+            data: [
+                <#if light?exists>
+                    <#list light?keys as key>
+                    "${key!''}",
+                    </#list>
+                </#if>
+            ]
+        },
+        yAxis: {
+            type: 'value'
+        },
+        series: [{
+            name:'光照强度',
+            data: [
+                <#if light?exists>
+                    <#list light?keys as key>
+                    "${light[key]!''}",
+                    </#list>
+                </#if>
+            ],
+            type: 'line',
+            smooth: true
+        }]
+    };
+    // 使用刚指定的配置项和数据显示图表。
+    myChart3.setOption(option);
+    var myChart4 = echarts.init(document.getElementById('main4'));
+
+    // 指定图表的配置项和数据
+    var option = {
+        grid: {
+            top: '5%',
+            right: '1%',
+            left: '1%',
+            bottom: '10%',
+            containLabel: true
+        },
+        tooltip: {
+            trigger: 'axis'
+        },
+        xAxis: {
+            type: 'category',
+            data: [
+                <#if T_humidity?exists>
+                    <#list T_humidity?keys as key>
+                    "${key!''}",
+                    </#list>
+                </#if>
+            ]
+        },
+        yAxis: {
+            type: 'value'
+        },
+        series: [{
+            name:'土壤湿度',
+            data: [
+                <#if T_humidity?exists>
+                    <#list T_humidity?keys as key>
+                    "${T_humidity[key]!''}",
+                    </#list>
+                </#if>
+            ],
+            type: 'line',
+            smooth: true
+        }]
+    };
+    // 使用刚指定的配置项和数据显示图表。
+    myChart4.setOption(option);
+
+</script>
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 </body>
 </html>
