--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,6 +48,7 @@
                     // TODO 缺陷：明文传输
                     data : JSON.stringify(data.field),
                     success : function(data) {
+                        alert(data.message)
                         if(data.message.indexOf("登录成功")!=-1){
 							alert('登陆成功！！！\n即将跳转到系统主页')
 							location.href="index"
